fix: header perform on small screens

--- a/src/components/Page/index.module.scss
+++ b/src/components/Page/index.module.scss
@@ -1,4 +1,6 @@
 .page {
+  width: min-content;
+  min-width: 100%;
   color: var(--colorPrimary);
   background-color: var(--colorPrimaryBg);
 }
